sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: '(' expected but identifier found.
      if plusPetit(i,j) echange(i,j);
         ^AlgBubbleSort1:9: error: illegal start of simple expression
      if plusPetit(i,j) echange(i,j);
                                    ^