sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()
{
  var n = getNombreValeurs();
  for (i <- 0 to n-1)
  {
    for (j <- i to n-1)
    {
      if plusPetit(i,j) echange(i,j);
    }
  }
}